fix overflow issues

--- a/news-explorer-frontend/src/components/App/App.css
+++ b/news-explorer-frontend/src/components/App/App.css
@@ -52,7 +52,7 @@
   line-height: 20px;
   text-align: center;
   min-height: 100vh;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .background__image {
