--- a/news-explorer-frontend/src/components/Main/Main.css
+++ b/news-explorer-frontend/src/components/Main/Main.css
@@ -39,7 +39,7 @@
 
   .main__content {
     max-width: 452px;
-    padding: 80px 160px;
+    padding: 80px 0px;
   }
 
   .main__title {
