--- a/news-explorer-frontend/src/components/Navigation/Navigation.css
+++ b/news-explorer-frontend/src/components/Navigation/Navigation.css
@@ -5,7 +5,6 @@
   column-gap: 20px;
   padding: 0;
   margin: 0;
-  color: #1a1b22;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 18px;
@@ -77,6 +76,7 @@
   .nav {
     background-color: #1a1b22;
     width: 100vw;
+    /* height: 100vh; */
   }
 
   .nav__hamburger {
